--- a/style.css
+++ b/style.css
@@ -47,18 +47,42 @@
   text-decoration: none;
 }
 
-.ul {
-  display: block;
-  list-style-type: none;
-}
-
-@media (min-width: 320px) {
+@media only screen and (mix-width: 600px) {
   .item {
-    flex-direction: column;
+    width: 100%;
   }
 }
 
-@media (min-width: 321px) {
+@media only screen and (min-width: 600px) {
+  .items {
+    display: flex;
+    flex-direction: row;
+  }
+  .item-1 {
+    width: 25%;
+  }
+
+  .item-2 {
+    width: 75%;
+  }
+
+  .button {
+    border: none;
+    background-color: chartreuse;
+    align-items: center;
+    align-self: center;
+    color: white;
+    padding: 5px 35px;
+    border-radius: 4px;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .items {
+    display: flex;
+    flex-direction: row;
+  }
   .item-1 {
     width: 100%;
   }
@@ -66,11 +90,14 @@
   .item-2 {
     width: 100%;
   }
-}
-
-@media (min-width: 769px) {
-  .items {
-    display: flex;
-    flex-direction: row;
+  .button {
+    border: none;
+    background-color: chartreuse;
+    align-items: center;
+    align-self: center;
+    color: white;
+    padding: 5px 100px;
+    border-radius: 4px;
+    text-decoration: none;
   }
 }
